# lambda-microservice

./: .env  .env.sample  .gitignore  CLINE.md  CLINE_LOG_20250715.md  CLINE_LOG_20250716.md  CLINE_LOG_20250717.md  INVESTIGATION_PLAN.md  INVESTIGATION_RESULTS_PHASE1.md  INVESTIGATION_RESULTS_PHASE1_FINAL.md  PHASE4_COMPLETION_PLAN.md  README.md  RUST_VERSION_OPTIMIZATION_PLAN.md  SAFE_WORK_PROCEDURES.md  SESSION_MANAGEMENT_POSTGRESQL_PLAN.md  STARTUP_ISSUES.md  coverage-summary.md  docker-compose-minimal.yml  docker-compose.test.yml  docker-compose.yml  rust-toolchain.toml  test_api_functions.sh  test_database_functions.sh  test_direct_api.sh  test_simple_api.sh
.clinerules/: base.md
backups/20250715_121939/: Cargo.toml  git_log.txt  git_status.txt
backups/20250715_121939/openfaas/: functions.yml
backups/20250715_121939/openfaas/templates/python/: app.py
backups/20250715_121939/scripts/: deploy-runtime-functions.sh
backups/20250715_121939/src/: config.rs  kubernetes.rs
backups/20250715_125919/: Cargo.toml  git_diff.txt  git_status.txt
backups/20250715_125919/kubernetes/functions/: python-runtime.yaml
backups/20250715_125919/kubernetes/openfaas/: function-controller.yaml
backups/20250715_125919/kubernetes/runtimes/: python-deployment.yaml
backups/20250715_125919/migrations/: V1.0.2__create_request_logs.sql
backups/20250715_125919/src/: index.js  main.rs
backups/20250715_132556/: git_status.txt
backups/20250715_132556/docs/database/: database_schema.md
backups/20250715_132556/migrations/: V1.0.1__create_schemas.sql  V1.0.4__create_error_logs.sql
backups/20250715_132556/scripts/: measure_coverage.sh
backups/20250715_132556/src/: config.rs  error.rs
backups/20250715_214349/: git_diff.txt  git_status.txt
backups/20250715_214349/docs/testing/: test_plan.md
backups/20250715_214349/kubernetes/runtimes/: rust-deployment.yaml
backups/20250715_214349/scripts/: test_e2e.sh
backups/20250715_214349/src/: runtime.rs
backups/20250715_222609/: git_diff.txt  git_log.txt  git_status.txt
backups/20250715_222609/scripts/: project_guard.sh  run_test_pipeline.sh
backups/20250715_222609/test/mocks/: mock_runtime_server.js
backups/20250716_031119/: git_status.txt
backups/20250716_031119/kubernetes/controller/: secrets.yaml
backups/20250716_031119/scripts/: test_runtimes.sh
backups/20250716_031119/src/: lib.rs  logger.rs
backups/20250716_034306/: git_diff.txt  git_log.txt  git_status.txt
backups/20250716_034306/scripts/: docker_test.sh  install_wasm_pack.sh  script_test.sh
backups/20250716_034306/src/: api.rs  session.rs
backups/20250716_112357/: git_diff.txt  git_log.txt  git_status.txt
backups/20250716_112357/migrations/: V1.0.5__create_sessions.sql
backups/20250716_112357/scripts/: test_wasm_execution.sh
backups/20250716_112357/src/: api.rs
backups/20250717_034915/: git_diff.txt  git_log.txt  git_status.txt
backups/20250717_034915/docs/: configuration.md
backups/20250717_034915/scripts/: deploy-openfaas.sh  init_meta_schema.sh  safe_modification_workflow.sh  set_docker_env.sh
backups/20250717_034915/src/: app.py
backups/20250717_080916/: git_diff.txt  git_log.txt  git_status.txt
backups/20250717_080916/migrations/: V1.0.3__create_functions.sql
backups/20250717_080916/scripts/: combine_coverage.sh  performance_test_simple.sh
backups/20250717_080916/src/: logger.rs  openfaas.rs
backups/20250717_155041/: Cargo.toml  git_diff.txt  git_log.txt  git_status.txt
backups/20250717_155041/docs/deployment/: deployment_guide.md
backups/20250717_155041/scripts/: benchmark_agent.sh  deploy_k8s.sh
backups/20250717_155041/src/: error.rs  session.rs
backups/20250717_155041/src/database/: tests.rs
backups/20250717_223046/: git_diff.txt  git_status.txt
backups/20250717_223046/scripts/: migrate_database.sh  setup_local_dev.sh
backups/20250717_223046/src/: api.rs
backups/20250717_225555/: git_diff.txt  git_status.txt
backups/20250717_225555/scripts/: docker_compose_compat.sh  simple_e2e_test.sh
backups/20250717_225555/src/: api.rs  error.rs  kubernetes.rs  session.rs
config/: runtime_mappings.json
controller/: .env  Cargo.toml  Cargo_new.toml  Dockerfile  Dockerfile_new  build.rs
controller/src/: api.rs  cache.rs  config.rs  database.rs  error.rs  function.rs  kubernetes.rs  lib.rs  lib_main.rs  logger.rs  main.rs  mocks.rs  openfaas.rs  protocol.rs  runtime.rs  schema.rs  session.rs  utils.rs
controller/src/openfaas/: tests.rs
controller/src/protocol/: grpc.rs
controller/src/protocol/tests/: grpc_tests.rs
controller/tests/: api_tests.rs  cache_tests.rs  database_tests.rs  function_tests.rs  kubernetes_tests.rs  lib_main_tests.rs  logger_tests.rs  main_tests.rs  openfaas_tests.rs  protocol_grpc_tests.rs  runtime_tests.rs
controller/tests/integration/: api_tests.rs  mod.rs  runtime_tests.rs  session_tests.rs  utils.rs
controller/tests/isolated/: mod.rs
controller/tests/protocol/: grpc_tests.rs  mod.rs
database/migrations/: V1.0.0__initial_schema.sql  V1.0.6__insert_default_functions.sql
docs/api/: api_specification.md
docs/archives/: STARTUP_ISSUE_FIX_PLAN.md
docs/database/: database_schema.md
docs/operations/: operations_manual.md
docs/technical/: rust_controller_spec.md
docs/testing/: test_plan.md
envoy/: Dockerfile  envoy.yaml
kubernetes/controller/: configmap.yaml  deployment.yaml
kubernetes/openfaas/: gateway.yaml  namespaces.yaml
runtimes/nodejs/: Dockerfile  package.json
runtimes/nodejs/src/: index.js
runtimes/python/: Dockerfile  requirements.txt
runtimes/python/src/: app.py
runtimes/rust/: Cargo.toml  Dockerfile
runtimes/rust/assets/: example.wasm  example.wat
runtimes/rust/src/: main.rs
scripts/: README_script_test.md  combine_coverage.sh  init_sample_data.sh  json_helper.js  measure_focused_coverage.sh  run_focused_tests.sh  run_functional_tests.sh  run_integration_tests.sh  run_isolated_tests.sh  run_test_pipeline.sh  setup_local_dev.sh  setup_minikube.sh  test_e2e.sh  test_error_handling.sh  test_grpc_adapter.sh  test_wasm_execution_extended.sh
(+19 files in other folders)
