[package]
name = "lambda-microservice-rust-runtime"
version = "0.1.0"
edition = "2018"
authors = ["Lambda Microservice Team"]
description = "Rust runtime for lambda microservice"

[dependencies]
# Web framework
actix-web = "3.3"
actix-cors = "0.5"

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# tracing-actix-web = "0.7.4"  # TEMPORARILY DISABLED

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# Utilities
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"

# Database
tokio-postgres = "0.7.0"
deadpool-postgres = "0.10.0"

# WebAssembly execution - TEMPORARILY DISABLED (compatibility issues)
# wasmtime = "8.0.1"

# WebAssembly compilation - TEMPORARILY DISABLED (compatibility issues)
# wasm-pack = "0.11.1"
tempfile = "3.6.0"
# wasm-bindgen = "0.2.83"
serde_derive = "1.0.163"

[dev-dependencies]
mockall = "0.11.4"
test-log = "0.2.11"
# env_logger = "0.9.3"  # REMOVED - not used in source code
# actix-test = "0.1.1"  # TEMPORARILY DISABLED
