[package]
name = "lambda-microservice-rust-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Lambda Microservice Team"]
description = "Rust runtime for lambda microservice"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-cors = "0.6.4"

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.4"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# Utilities
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"

# WebAssembly execution
wasmtime = "9.0.3"

[dev-dependencies]
mockall = "0.11.4"
test-log = "0.2.11"
env_logger = "0.10.0"
actix-test = "0.1.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
